# VALOR-CD

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/levir/: data.yaml  stage1.yaml  stage2.yaml  stage3.yaml
configs/whu/: data.yaml  stage1.yaml  stage2.yaml  stage3.yaml
docs/: DATASETS.md  REPRODUCIBILITY.md  WEIGHTS.md
models/sam/: README.md
scripts/: 01_generate_pseudo_labels.py  02_train_detector.py  03_test.py
src/valor_cd/: experiment.py  postprocess.py  pseudo_label.py
src/valor_cd/data/: __init__.py  change_pair.py  pseudo_change.py  spatial_split.py
src/valor_cd/evaluation/: __init__.py  cam_calibration.py  candidate_calibration.py  counterfactual.py  metrics.py
src/valor_cd/losses/: __init__.py  joint_distillation.py  strong_cam_prior.py
src/valor_cd/models/: __init__.py  dinov2_cam.py  dinov2_dense_change.py  dinov2_strong_cam.py  factory.py
tests/: test_public_configs.py
tools/: audit_dataset.py  build_spatial_manifests.py  check_release.py  create_fixed_calibrated_checkpoint.py  evaluate_dense_detector.py  generate_p5_soft_pseudo_labels.py  postprocess_p5_sam.py  prepare_levir_dataset.py  prepare_whu_dataset.py  train_dense_detector.py  train_p1_cam.py
