[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valor-cd"
version = "1.0.0"
description = "Weakly supervised building change detection with candidate validation, SAM boundary reconstruction, and robust soft-hard distillation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Lukang Wang"}
]
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python>=4.8,<5",
  "pillow>=10,<13",
  "pyyaml>=6,<7",
  "tqdm>=4.66,<5",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
  "transformers>=4.46,<6",
  "timm>=1.0,<2",
  "rasterio>=1.3,<2"
]

[project.urls]
Repository = "https://github.com/WangLukang/VALOR-CD"
Issues = "https://github.com/WangLukang/VALOR-CD/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
